//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  name String [not null]
  email String [unique, not null]
  image String
  password String [not null]
  followers User [not null]
  follows User [not null]
  recipes Recipe [not null]
  favorites Recipe [not null]
  notifications Notification [not null]
  messagesSent Message [not null]
  messagesReceived Message [not null]
  ratings Rating [not null]
}

Table Recipe {
  id String [pk]
  ownerId String [not null]
  tagId String [not null]
  name String [not null]
  description String [not null]
  ingredients String[] [not null]
  image String [not null]
  methodOfPreparation String [not null]
  kcal Int [not null]
  owner User [not null]
  favoritesBy User [not null]
  tag Tag [not null]
  ratings Rating [not null]
}

Table Rating {
  id String [pk]
  stars Int [not null]
  ratedById String [not null]
  recipeId String [not null]
  ratedBy User [not null]
  recipe Recipe [not null]
}

Table Tag {
  id String [pk]
  name String [not null]
  image String [not null]
  recipes Recipe [not null]
}

Table Notification {
  id String [pk]
  title String [not null]
  description String [not null]
  createAt DateTime [default: `now()`, not null]
  user_id String [not null]
  readed Boolean [not null, default: false]
  user User [not null]
}

Table Message {
  id String [pk]
  senderId String [not null]
  receiverId String [not null]
  text String [not null]
  createdAt DateTime [default: `now()`, not null]
  readed Boolean [not null, default: false]
  receiver User [not null]
  sender User [not null]
}

Table Followers {
  followersId String [ref: > User.id]
  followsId String [ref: > User.id]
}

Table Favorite {
  favoritesId String [ref: > Recipe.id]
  favoritesbyId String [ref: > User.id]
}

Ref: Recipe.ownerId > User.id

Ref: Recipe.tagId > Tag.id

Ref: Rating.ratedById > User.id

Ref: Rating.recipeId > Recipe.id

Ref: Notification.user_id > User.id

Ref: Message.receiverId > User.id

Ref: Message.senderId > User.id